<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" app:layout_anchorGravity="center" android:id="@+id/constraintLayout"
            app:layout_anchor="@+id/constraintLayout">
        <androidx.constraintlayout.widget.Barrier android:layout_width="wrap_content"
                                                  android:layout_height="wrap_content" android:id="@+id/barrier2"
                                                  app:barrierDirection="left"/>
        <androidx.constraintlayout.widget.Barrier android:layout_width="wrap_content"
                                                  android:layout_height="wrap_content" android:id="@+id/barrier3"
                                                  app:barrierDirection="top"/>
        <!--
        <Button
                android:id="@+id/openDoor"
                android:layout_height="38dp"
                android:layout_width="134dp"
                android:text="@string/openDoor"
                android:elevation="2dp"
                app:backgroundTint="@color/skyBlue"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/photoRef"
                android:layout_marginBottom="12dp" app:layout_constraintTop_toTopOf="@+id/guideline10"
                app:layout_constraintVertical_bias="0.529"/>
        <androidx.constraintlayout.widget.Barrier android:layout_width="wrap_content"
                                                  android:layout_height="wrap_content" android:id="@+id/barrier4"
                                                  app:barrierDirection="top"/>
        <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content" android:id="@+id/guideline8"
                                                    app:layout_constraintGuide_begin="223dp"
                                                    android:orientation="horizontal"/>
        <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content" android:id="@+id/guideline9"
                                                    app:layout_constraintGuide_begin="528dp"
                                                    android:orientation="horizontal"/>
        -->

        <ToggleButton
                android:text="@string/openDoor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="@string/CloseDoor"
                android:textOn="@string/openDoor"
                android:id="@+id/openDoor"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="72dp"
                style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                app:layout_constraintBottom_toTopOf="@+id/photoRef"
                android:layout_marginBottom="28dp"
                app:layout_constraintTop_toTopOf="@+id/guideline10"
                app:layout_constraintVertical_bias="1.0"
                android:textColor="#00bfff" app:layout_constraintEnd_toStartOf="@+id/ringBell"
                android:layout_marginEnd="71dp"/>
        <ProgressBar
                android:layout_width="188dp"
                android:layout_height="173dp"
                android:id="@+id/progress"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="@+id/guideline10"/>
        <ImageView
                android:layout_width="264dp"
                android:layout_height="273dp"
                tools:srcCompat="@tools:sample/avatars"
                android:id="@+id/photoRef"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintTop_toTopOf="@+id/guideline10"/>
        <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content" android:id="@+id/guideline10"
                                                    app:layout_constraintGuide_begin="162dp"
                                                    android:orientation="horizontal"/>
        <ToggleButton
                android:textOn="@string/bell_On"
                android:textOff="@string/bell_off"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ringBell"
                style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="72dp" app:layout_constraintBottom_toTopOf="@+id/photoRef"
                app:layout_constraintTop_toTopOf="@+id/guideline10" app:layout_constraintVertical_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/openDoor" app:layout_constraintHorizontal_bias="1.0"
                android:layout_marginBottom="28dp" android:textColor="#00bfff"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="161dp"
            app:cardElevation="10dp"
            app:cardCornerRadius="20dp"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardMaxElevation="12dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            android:id="@+id/cardView" app:layout_constraintTop_toTopOf="parent" app:layout_anchorGravity="center"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
            app:layout_anchor="@+id/cardView" app:layout_constraintEnd_toEndOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <!--
            <Button
                    android:id="@+id/getPhoto"
                    android:text="@string/GetPhoto"
                    android:layout_width="133dp"
                    android:layout_height="49dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toEndOf="@+id/openDoor" app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="64dp" android:layout_marginEnd="36dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:backgroundTint="@color/skyBlue"/>
                    -->
            <TextView
                    android:id="@+id/Notification_heading"
                    android:text="@string/NotificationTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.501" app:layout_constraintVertical_bias="0.17"/>
            <TextView
                    android:text="@string/DateNotify"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_anchorGravity="center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/notification_date"
                    app:layout_constraintHorizontal_bias="0.501"
                    app:layout_constraintTop_toTopOf="@+id/Notification_heading" android:layout_marginTop="16dp"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.266"/>
            <TextView
                    android:text="@string/NotifyPayload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/Notification_payload"
                    app:layout_constraintTop_toBottomOf="@+id/notification_date"
                    android:layout_marginTop="12dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintVertical_bias="0.0"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.BottomAppBar"
            android:layout_gravity="bottom"
            app:backgroundTint="@color/skyBlue"
            app:navigationIcon="@mipmap/app_draw"/>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/getPhoto"
            android:layout_width="wrap_content"
            android:src="@drawable/ic_baseline_camera_24"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/skyBlue"
            app:layout_anchor="@id/bar"
            app:fabSize="normal"
            android:adjustViewBounds="true"/>


</androidx.coordinatorlayout.widget.CoordinatorLayout>